--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
+    "example-module": "^1.0.0",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
     "node-sass": "^7.0.3",
@@ -57,3 +58,5 @@
     "tailwindcss": "^3.3.2"
   }
 }
+
+
